--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,4 @@ iso-639 = { git = "https://github.com/noumar/iso639.git" }
 cement = { git = "https://github.com/wanmok/cement.git" }
 # We maintain forks of AllenNLP to resolve dependency issues.
 allennlp = { git = "https://github.com/wanmok/allennlp.git" }
+pandas = "^2.0.2"
